--- a/ForgeBeekeepingVR/Facebook.Wit.Dictation.csproj
+++ b/ForgeBeekeepingVR/Facebook.Wit.Dictation.csproj
@@ -53,6 +53,9 @@
     <UnityVersion>2021.3.16f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="Assets\Oculus\Voice\Lib\Wit.ai\Features\Dictation\Scripts\Runtime\Dictation\Events\DictationSessionEvent.cs" />
     <Compile Include="Assets\Oculus\Voice\Lib\Wit.ai\Features\Dictation\Scripts\Runtime\Dictation\Data\DictationSession.cs" />
     <Compile Include="Assets\Oculus\Voice\Lib\Wit.ai\Features\Dictation\Scripts\Runtime\Dictation\Events\DictationEvents.cs" />
