--- a/ForgeBeekeepingVR/HurricaneVR.Editor.csproj
+++ b/ForgeBeekeepingVR/HurricaneVR.Editor.csproj
@@ -53,6 +53,9 @@
     <UnityVersion>2021.3.16f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="Assets\HurricaneVR\Framework\Editor\HVRGunPartEditor.cs" />
     <Compile Include="Assets\HurricaneVR\Framework\Editor\HVRPosableHandEditor.cs" />
     <Compile Include="Assets\HurricaneVR\Framework\Editor\HVRGunBoltEditor.cs" />
