--- a/ForgeBeekeepingVR/VoiceSDK.Dictation.Editor.csproj
+++ b/ForgeBeekeepingVR/VoiceSDK.Dictation.Editor.csproj
@@ -53,6 +53,9 @@
     <UnityVersion>2021.3.16f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="Assets\Oculus\Voice\Features\Dictation\Scripts\Editor\Drawers\WitDictationRuntimeConfigDrawer.cs" />
     <Compile Include="Assets\Oculus\Voice\Features\Dictation\Scripts\Editor\Data\AppDictationDataCreation.cs" />
     <Compile Include="Assets\Oculus\Voice\Features\Dictation\Scripts\Editor\AppDictationExperienceEditor.cs" />
